--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,36 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:name="android.software.leanback" android:required="false" />
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
 
     <application
+        android:name=".HomeApplication"
         android:allowBackup="true"
+        android:banner="@drawable/banner"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Home"
-        android:name=".HomeApplication"
-        android:banner="@drawable/banner"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.Home">
+        <activity android:name=".activities.AutoConfActivity">
+            <intent-filter android:label="Load configuration">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="mqtthome"
+                    android:host="autoconf"
+                    android:pathPrefix="" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.SectionEditActivity" />
         <activity android:name=".activities.TextWidgetEditActivity" />
         <activity android:name=".activities.SwitchWidgetEditActivity" />
@@ -27,6 +43,7 @@
         <activity android:name=".activities.DropdownWidgetEditActivity" />
         <activity android:name=".activities.ColorWidgetEditActivity" />
         <activity android:name=".activities.ButtonWidgetEditActivity" />
+        <activity android:name=".activities.SliderWidgetEditActivity" />
         <activity
             android:name=".activities.EditItemsActivity"
             android:label="@string/title_activity_edit_items" />
@@ -41,17 +58,20 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.DEFAULT" />-->
-<!--                <category android:name="android.intent.category.HOME" />-->
-<!--            </intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+            <!-- <category android:name="android.intent.category.HOME" /> -->
+            <!-- </intent-filter> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
