--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.dunai.home"
         minSdkVersion 28
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.2"
+        versionCode 7
+        versionName "1.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -20,6 +20,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                debugSymbolLevel "FULL"
+            }
         }
     }
     compileOptions {
@@ -52,4 +55,6 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'com.android.support:localbroadcastmanager:28.0.0'
     implementation group: 'androidx.gridlayout', name: 'gridlayout', version: '1.0.0'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.github.woxthebox:draglistview:1.7.2'
 }
