--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.software.leanback" android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +16,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Home"
-        android:name=".HomeApplication">
-        <activity android:name=".activities.SectionWidgetEditActivity"></activity>
+        android:name=".HomeApplication"
+        android:banner="@drawable/banner">
+        <activity android:name=".activities.SectionEditActivity" />
         <activity android:name=".activities.TextWidgetEditActivity" />
+        <activity android:name=".activities.SwitchWidgetEditActivity" />
+        <activity android:name=".activities.GraphWidgetEditActivity" />
+        <activity android:name=".activities.DropdownWidgetEditActivity" />
         <activity
             android:name=".activities.EditItemsActivity"
             android:label="@string/title_activity_edit_items" />
@@ -30,12 +36,14 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Home.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
 
