Removed the previously missed ussage of SDK 21+ features such as SeekBar.setMin(int). The default Android implementation of Java Stream API (SDK 24+) is also replaced with the opensource backport available for SDK 21+.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation "com.github.abhishekti7:UnicornFilePicker:1.0.1"
     implementation group: 'org.bouncycastle', name: 'bcprov-jdk15to18', version: '1.68'
     implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15to18', version: '1.68'
+
+    implementation 'com.annimon:stream:1.2.2'
 }
